<resources>

    <string name="app_name">Dragon Ball Z</string>
    <string name="new_app_name">Dragon Ball Z</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
    <string name="left_blank">This is intentionally left blank for you to make :)</string>
    <string name="log_out">Thanks</string>
    <string name="mobile_number">mob</string>

    <string name="forgot_passwprd">fo</string>
    <string name="log_in">Log IN</string>
    <string name="login_for_saiyons">SAIYONS</string>
    <string name="login_for_villans">VILLANS</string>
    <string name="title_activity_cooler">Cooler</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_out1">log out</string>
    <string name="open_drawer" />
    <string name="close_drawer" />
    <string name="open" />
    <string name="close" />


</resources>
